# modern-rpc

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: modern_rpcConfig.cmake
include/modern_rpc/: basic_server.hpp  server.hpp
include/modern_rpc/details/: pimpl.hpp  propagate_const.h
lib/: CMakeLists.txt  basic_server.cpp
test/: CMakeLists.txt  unit-basic_server.cpp  unit.cpp
